--- a/app/src/main/res/layout/activity_photo_selector.xml
+++ b/app/src/main/res/layout/activity_photo_selector.xml
@@ -10,6 +10,7 @@
         android:layout_width="304dp"
         android:layout_height="221dp"
         android:layout_marginTop="60dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
